--- a/.github/workflows/ubuntu_22.04.yml
+++ b/.github/workflows/ubuntu_22.04.yml
@@ -16,6 +16,7 @@ jobs:
     - name: Install container2wasm
       run: |
         wget https://github.com/ktock/container2wasm/releases/download/v0.6.5/container2wasm-v0.6.5-linux-amd64.tar.gz
+        tar -xvf container2wasm-v0.6.5-linux-amd64.tar.gz .
         sudo mv c2w /usr/local/bin/
 
     - name: Convert Ubuntu to WASM
